ipv6-site-enforcer/manifests/namespace.yaml
# SPDX-License-Identifier: MPL-2.0
apiVersion: v1
kind: Namespace
metadata:
  name: ipv6-enforcer
  labels:
    app.kubernetes.io/part-of: flatracoon
